--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,14 @@ version: '3.9'
 services:
   web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "
+      while ! nc -z db 5432;
+      do
+        echo 'Aguardando o banco de dados...';
+        sleep 1;
+      done;
+      python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
