--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,18 @@ version: '3.9'
 services:
   web:
     build: .
-    command: >
-      sh -c "
-      while ! nc -z db 5432;
-      do
-        echo 'Aguardando o banco de dados...';
-        sleep 1;
-      done;
-      python manage.py runserver 0.0.0.0:8000"
+    command: 
+      - sh 
+      - -c 
+      - |
+        while ! nc -z db 5432;
+        do
+          echo 'Aguardando o banco de dados...';
+          sleep 1;
+        done;
+        python manage.py migrate;
+        python manage.py collectstatic --no-input;
+        python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
@@ -27,9 +31,9 @@ services:
   db:
     image: postgres:13
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: movie_db
+      POSTGRES_USER: ${PG_USER}
+      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_DB: ${PG_DB}
     ports:
       - "5432:5432"
     volumes:
