--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,29 @@
-version: '3.9'
-
 services:
   web:
     build: .
     command: 
-      - sh 
-      - -c 
+      - sh
+      - -c
       - |
-        while ! nc -z db 5432;
-        do
-          echo 'Aguardando o banco de dados...';
-          sleep 1;
-        done;
-        python manage.py migrate;
-        python manage.py collectstatic --no-input;
+        while ! pg_isready -h db -p 5432 -U postgres; do
+          echo 'Aguardando banco de dados...'
+          sleep 2
+        done
+        python manage.py migrate
         python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
-      - PG_HOST=db
-      - PG_PORT=5432
-      - PG_USER=postgres
-      - PG_PASSWORD=postgres
-      - PG_DB=movie_db
+      PG_HOST: db
+      PG_PORT: 5432
+      PG_USER: postgres
+      PG_PASSWORD: postgres
+      PG_DB: movie_db
 
   db:
     image: postgres:13
@@ -38,6 +35,11 @@ services:
       - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   pgdata:
