--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 ### Python ###
 __pycache__/
 *.py[cod]
@@ -25,13 +24,13 @@ venv.bak/
 db.sqlite3
 *.log
 /mediafiles/
-/staticfiles/
+staticfiles/
 *.pot
 *.mo
 
-### Migrations (opcional - descomente para excluir) ###
-# */migrations/*
-# !*/migrations/__init__.py
+### Migrations ###
+*/migrations/*
+!*/migrations/__init__.py
 
 ### Docker ###
 docker-compose.override.yml
@@ -41,8 +40,6 @@ docker-compose.override.yml
 ### Environment Variables ###
 .env
 .env.*
-!.env.example
-secrets.json
 
 ### IDEs ###
 .vscode/
@@ -50,8 +47,6 @@ secrets.json
 *.sublime-project
 *.sublime-workspace
 *.iml
-*.ipr
-*.iws
 
 ### Sistema Operacional ###
 .DS_Store
@@ -60,27 +55,10 @@ secrets.json
 .Spotlight-V100
 .Trashes
 Thumbs.db
-ehthumbs.db
-Desktop.ini
 
-### Temporary Files ###
+### Arquivos Temporários ###
 *.swp
 *.bak
 *.tmp
 *.orig
 *~
-
-### Logs e Debug ###
-logs/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-### Testes ###
-.coverage
-htmlcov/
-.pytest_cache/
-test-results.xml
-
-### PostgreSQL (Docker Volume) ###
-/postgres_data/
