--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,12 @@
+version: '3.8'
 services:
   web:
     build: .
-    command: 
-      - sh
-      - -c
-      - |
-        while ! pg_isready -h db -p 5432 -U postgres; do
-          echo 'Aguardando banco de dados...'
-          sleep 2
-        done
-        python manage.py migrate
-        python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "while ! pg_isready -h db -p 5432 -U postgres; do
+      echo 'Aguardando banco de dados...'; sleep 2; done;
+      python manage.py migrate &&
+      python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
